--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "no-bitwise": "error",
     "no-console": "warn",
     "react-hooks/exhaustive-deps": "warn",
+    "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off", // Optional: If you want to disable explicit return types on functions.
     "padding-line-between-statements": [
       "error",
