--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.29.25",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.38",
@@ -28,7 +28,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
@@ -53,18 +53,24 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.22.5",
+    "@faker-js/faker": "^8.0.2",
     "@tanstack/eslint-plugin-query": "^4.29.25",
     "@types/react-modal": "^3.16.0",
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "autoprefixer": "^10.4.14",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "postcss": "^8.4.26",
     "prettier": "^3.0.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "ts-jest": "^29.1.1"
   }
 }
