--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
+    "jest-transform-css": "^6.0.1",
     "postcss": "^8.4.26",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.3",
